# wow-launcher

./: README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml
launcher/: index.html
launcher/src-tauri/: Cargo.toml
launcher/src-tauri/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: lib.rs  main.rs
