[package]
name = "wow-launcher-next"
version = "2.0.4"
description = "Sirus Next Launcher"
authors = ["Nikolay Kost <jilizart@gmail.com>"]
edition = "2021"

[lib]
name = "lauchner_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lib_rusty_torrent = { git = "https://github.com/arlofilley/rusty_torrent.git" }
reqwest = "0.11.24"
tempfile = "3.10.0"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
